# Synnaut

./: .gitignore  CMakeLists.txt  CMakePresets.json
cmake/: freertos.cmake
cmake/platform/: teensy41.cmake  teensy41.ld
cmake/toolchain/: arm-gnu-gcc.cmake  llvm-arm.cmake
platform/teensy41/: CMakeLists.txt  FreeRTOSConfig.h  clockspeed.c  sai.c  sai.h  startup.c  string_stubs.c  uart.c  uart.h  uart_serial.c  uart_serial.h
tests/device/hello/: CMakeLists.txt  hello.cpp  main.cpp
tests/device/sai_clocks/: CMakeLists.txt  test_sai_clocks.cpp
